# baselinker_to_wix

./: .cursorrules  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose-main.yml  docker-entrypoint.sh  example.env  fix_session_leaks.py  list.json  loggers.py  pyproject.toml  session_leak_report.txt  supervisord.conf  temp.py  test_logging.py  test_stock_sync_system.py
.cursor/rules/: base-rule.mdc
.kiro/steering/: base-rule.md
app/: celery_app.py  celery_beat.py  celery_logging.py  celery_shared.py  database.py  drive.py  main.py  qwe.py  tg_app.py
app/api/: deps.py
app/core/: config.py  security.py  stock_sync_config.py
app/data_access/: allegro_order_repository.py
app/middleware/: csrf.py
app/models/: __init__.py  allegro_event_tracker.py  allegro_order.py  allegro_token.py  amazon_order.py  offer.py  operations.py  product.py  product_allegro_sync_settings.py  product_sync_lock.py  stock_synchronization.py  user.py  warehouse.py  werehouse.py  wix_integration.py
app/repositories/: allegro_event_tracker_repository.py
app/routers/: products.py
app/schemas/: __init__.py  baselinker_models.py  product.py  stock_synchronization.py  user.py  wix_models.py
app/services/: MIGRATION_GUIDE.md  amazon.py  (+20 more)
docs/: Diary.md  allegro_sync_implementation_plan.md  changelog.md  logging_guide.md  project.md  qa.md  stock_synchronization_architecture.md  stock_synchronization_implementation_plan.md  stock_synchronization_testing_guide.md  stock_synchronization_validation_and_alerts.md  tasktracker.md  wix_sync_guide.md
migrations/: env.py
(+134 files in other folders)
